2016-01-13  Natalia Portillo  <claunia@claunia.com>

	* Enums.cs:
	  Added M-Systems vendor commands.

2016-01-13  Natalia Portillo  <claunia@claunia.com>

	* Enums.cs:
	* DiscImageChef.Devices.csproj:
	  Implemented Certance, Fujitsu and Hewlett-Packard vendor
	  commands.

	* Device/ScsiCommands/Certance.cs:
	  Implemented Certance vendor commands.

	* Device/ScsiCommands/Fujitsu.cs:
	  Implemented Fujitsu vendor commands.

	* Device/ScsiCommands/HP.cs:
	  Implemented Hewlett-Packard vendor commands.

2016-01-13  Natalia Portillo  <claunia@claunia.com>

	* Enums.cs:
	* DiscImageChef.Devices.csproj:
	* Device/ScsiCommands/ArchiveCorp.cs:
	  Added vendor commands for Archive Corporation Viper 2060S,
	  2125S and 2150S.

	* Device/ScsiCommands/Adaptec.cs:
	  Corrected documentation typo.

2016-01-13  Natalia Portillo  <claunia@claunia.com>

	* Enums.cs:
	* DiscImageChef.Devices.csproj:
	* Device/ScsiCommands/Adaptec.cs:
	  Added Adaptec ACB-4000A and ACB-4070 vendor commands.

2016-01-13  Natalia Portillo  <claunia@claunia.com>

	* Device/ScsiCommands/SMC.cs:
	* DiscImageChef.Devices.csproj:
	  Added read-only Streaming Commands.

	* Device/ScsiCommands/SSC.cs:
	  Added READ ATTRIBUTE.

	* Device/ScsiCommands/MMC.cs:
	  Corrected typo on header

	* Device/ScsiCommands/SPC.cs:
	  Corrected buffer mislength.
	Added support for READ ATTRIBUTE.

	* Enums.cs:
	  Corrected opcode for SCSI WRITE ATTRIBUTE.
	Added SCSI Streaming and Attribute enumerations.

2016-01-11  Natalia Portillo  <claunia@claunia.com>

	* Device/ScsiCommands.cs:
	* Device/ScsiCommands/MMC.cs:
	* Device/ScsiCommands/NEC.cs:
	* Device/ScsiCommands/SPC.cs:
	* Device/ScsiCommands/SBC.cs:
	* DiscImageChef.Devices.csproj:
	* Device/ScsiCommands/Plextor.cs:
	* Device/ScsiCommands/Pioneer.cs:
	* Device/ScsiCommands/HL-DT-ST.cs:
	  Separated SCSI commands by category/vendor.

2016-01-11  Natalia Portillo  <claunia@claunia.com>

	* Enums.cs:
	* Device/ScsiCommands.cs:
	  Added Plextor vendor commands.
